crates/fig-parser/tests/snapshots/integration_tests__control_flow__while_basic.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: count_down
        generic_params: []
        self_param: ~
        params:
          - name: n
            ty: I32
        return_types:
          - Ok
      body:
        statements:
          - While:
              condition:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - n
                      generic_args: []
                  op: GreaterThan
                  rhs:
                    IntegerLiteral:
                      base: Decimal
                      digits: "0"
                      suffix: ~
              body:
                statements:
                  - Pass
